--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ a {
   margin: 0px 18px;
 }
 
+p {
+  color: #686123;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
