--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,7 +9,7 @@ a {
   font-weight: normal;
   font-size: 20px;
   line-height: 24px;
-  text-decoration-line: underline;
+  text-decoration-line: none;
 
   color: #686123;
 
