--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ a {
   font-weight: normal;
   font-size: 20px;
   line-height: 24px;
-  text-decoration-line: none;
+  text-decoration-line: noen;
 
   color: #686123;
 
